# Fractals

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  fractal.cpp  fractal.hpp  fractal_cubic.hpp  fractal_experiment.hpp  fractal_quadratic.hpp  fractal_quartic.hpp  fractal_renderer.cpp  fractal_renderer.hpp  fractal_star.hpp  main.cpp
src/helpers/: thread_pool.hpp  vector2.hpp
